Fixing wrong position for search polygon menu

--- a/src/components/LeafletMap/leafletMap.scss
+++ b/src/components/LeafletMap/leafletMap.scss
@@ -17,6 +17,10 @@
         margin-right: 35px;
     }
 
+    .leaflet-draw:nth-child(2){
+        margin-top: 0px;
+    }
+
     .leaflet-bar {
         border: 0;
     }
